contest and qa changes
